# cursor-hub

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/cursor_hub/: __init__.py  __main__.py  config.py  dashboard.py  main.py  models.py  paths.py  state.py
tests/: test_additional_coverage.py  test_model_detection.py
