[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cursor-hub"
version = "0.1.0"
description = "A live terminal HUD for Cursor IDE — model, context, config, and session at a glance"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Naoko Reeves" },
]
keywords = ["cursor", "ide", "terminal", "dashboard", "hud", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.format]
quote-style = "double"

[project.scripts]
cursor-hub = "cursor_hub.main:main"

[project.urls]
Homepage = "https://github.com/naokoreeves/cursor-hub"
Repository = "https://github.com/naokoreeves/cursor-hub"
Issues = "https://github.com/naokoreeves/cursor-hub/issues"
